--- a/weather_map.html
+++ b/weather_map.html
@@ -5,21 +5,27 @@
         <link rel="stylesheet"
               href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css"
               type="text/css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+              integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+              crossorigin="anonymous">
         <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.css" rel="stylesheet"/>
         <link rel="stylesheet" href="css/weather_map.css">
         <title>Weather Map</title>
     </head>
+
     <body>
 
+        <div id="forecast"></div>
+        <div id="map" style="width:1350px; height: 675px;"></div>
 
-
-        <script src="js/apis/keys.js"></script>
         <script src="js/jquery-2.2.4.js"></script>
-        <script src="js/weather_map.js"></script>
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.js"></script>
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
                 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
                 crossorigin="anonymous"></script>
+        <script src="js/apis/keys.js"></script>
+        <script src="js/weather_map-utils.js"></script>
+        <script src="js/mapbox-utils.js"></script>
     </body>
 </html>
