--- a/weather_map.html
+++ b/weather_map.html
@@ -19,13 +19,14 @@
         <div id="map" style="width:1100px; height: 450px;"></div>
 
         <script src="js/jquery-2.2.4.js"></script>
-        <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.js"></script>
-        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
                 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
                 crossorigin="anonymous"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.js"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
         <script src="js/apis/keys.js"></script>
         <script src="js/weather_map-utils.js"></script>
         <script src="js/mapbox-utils.js"></script>
+        <script src="js/jquery-weather-loader.js"></script>
     </body>
 </html>
