--- a/weather_map.html
+++ b/weather_map.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <div id="forecast"></div>
+        <div id="forecast" class="card"></div>
         <div id="map" style="width:1100px; height: 450px;"></div>
 
         <script src="js/jquery-2.2.4.js"></script>
