--- a/weather_map.html
+++ b/weather_map.html
@@ -14,9 +14,11 @@
     </head>
 
     <body>
-
-        <div id="forecast" class="card"></div>
-        <div id="map" style="width:1100px; height: 450px;"></div>
+        <div class="navbar text-align-last-center" style="background: blue; color: white">
+            5 Day Forecast
+        </div>
+        <div id="forecast" class="container-fluid row d-flex flex-nowrap justify-content-center"></div>
+        <div class="m-auto"  id="map" style="width:1100px; height: 450px;"></div>
 
         <script src="js/jquery-2.2.4.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
